--- a/projetojsp/src/main/webapp/formulario.html
+++ b/projetojsp/src/main/webapp/formulario.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="ISO-8859-1">
 <link rel="stylesheet" type="text/css" href="./estilo/estilo.css" media="screen" />
-<title>Servlets</title>
+<title>Exemplo Servlets</title>
 </head>
 <body>
 	<form action="/projetojsp/recurso" method="get">
