feat: finalizando o CRUD

--- a/projetojsp/src/main/webapp/formulario.html
+++ b/projetojsp/src/main/webapp/formulario.html
@@ -6,7 +6,7 @@
 <title>Exemplo Servlets</title>
 </head>
 <body>
-	<form action="/projetojsp/recurso" method="post">
+	<form action="recurso" method="post">
 	
 		<label>
 			id:
